Fixes Method invokes inefficient Number constructor in Bug144120_GLCanvasMouseEvents
Change-Id: I8548076b97b97dc6bd73f518876e201294e22431
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>